Added hifi index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bazaar</title>
+  <title><%= content_for?(:title) ? yield(:title) : "Bazaar" %></title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
   <header>
-    <%= render 'layouts/navigation' %>
+    <nav class="top-bar" data-topbar role="navigation">
+      <%= render 'layouts/navigation' %>
+    </nav>
   </header>
 <%= yield %>
 
