--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,19 +1,34 @@
 <div class="jumbotron text-center">
   <h1>Bazaar</h1>
-  <p>A straightforward place to sell and buy cellphones</p></br>
+  <h3>A straightforward place to sell and buy cellphones</h3>
+  <div class="container marketing text-center">
+  </br>
+  </br>
+    <div class="row">
+      <div class="col-lg-4">
+        <img class="img-circle" src="/assets/add.png" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+        <h4>Place Your Ad</h4>
+        <p id="home">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+        <img class="img-circle" src="/assets/chat.png" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+        <h3>Make Contact</h3>
+        <p id="home">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+      </div><!-- /.col-lg-4 -->
+      <div class="col-lg-4">
+        <img class="img-circle" src="/assets/handshake.png" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+        <h3>Seal the Deal!</h3>
+        <p id="home">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+      </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
+  </br>
     <p>
-      <%= link_to "Register", '#', class: "btn btn-success" %></br>
+    <%= link_to "Register to Place Your Ad Now!", '#', class: "btn btn-lg btn-success" %></br>
     </p>
+  </div>
 </div>
 
-<nav class="text-center">
-  <ul class="pagination">
-    <li><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
-    <li><a href="#">1</a></li>
-    <li><a href="#">2</a></li>
-    <li><a href="#">3</a></li>
-    <li><a href="#">4</a></li>
-    <li><a href="#">5</a></li>
-    <li><a href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
-  </ul>
-</nav>
+<div class="text-center">
+  <h1>Just want to buy?</h1></br>
+  <h4>Please select your location below to see the ads:</h4></br>
+</div>
