--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-lg-4">
         <img class="img-circle" src="/assets/add.png" alt="Generic placeholder image" style="width: 140px; height: 140px;">
-        <h4>Place Your Ad</h4>
+        <h4>Place/See an Ad</h4>
         <p id="home">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
@@ -21,14 +21,39 @@
         <p id="home">Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
-  </br>
-    <p>
-    <%= link_to "Register to Place Your Ad Now!", '#', class: "btn btn-lg btn-success" %></br>
-    </p>
   </div>
 </div>
 
 <div class="text-center">
-  <h1>Just want to buy?</h1></br>
-  <h4>Please select your location below to see the ads:</h4></br>
+  <h1>Are you a buyer?</h1>
+</br>
+</br>
+  <div class="btn-group">
+    <button class="btn btn-primary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+      Select your location here <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu" role="menu">
+      <li><a href="#">Alberta</a></li>
+      <li><a href="#">British Columbia</a></li>
+      <li><a href="#">Manitoba</a></li>
+      <li><a href="#">New Brunswick</a></li>
+      <li><a href="#">Newfoundland and Labrador</a></li>
+      <li><a href="#">Nova Scotia</a></li>
+      <li><a href="#">Ontario</a></li>
+      <li><a href="#">Prince Edward Island</a></li>
+      <li><a href="#">Quebec</a></li>
+      <li><a href="#">Saskatchewan</a></li>
+    </ul>
+  </div>
+  </br>
+  </br>
+  <h1>Are you a seller?</h1>
+  </br>
+  </br>
+    <%= link_to "Register to place your first ad", new_user_path, class: "btn btn-success btn-lg" %>
+  </br>
+  </br>
+  </br>
+  </br>
 </div>
+
