Added Pages controller and views

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,19 +31,13 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
-}
 
 .text-muted {
-  padding-top: 20px;
+  padding-top: 15px;
 }
 
+/* Form styles
+-------------------------------------------------- */
 .form-signin {
   max-width: 330px;
   padding-top: 50px;
