--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,5 @@
-<p class="text-muted">© Bazaar - 2014</p>
+<nav class="navbar navbar-inverse navbar-fixed-bottom" role="navigation">
+  <div class="container">
+    <p class="text-muted">© Bazaar - 2014</p>
+  </div>
+</nav>
