Fixed rgister path

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -50,7 +50,7 @@
   <h1>Are you a seller?</h1>
   </br>
   </br>
-    <%= link_to "Register to place your first ad", new_user_path, class: "btn btn-success btn-lg" %>
+    <%= link_to "Register to place your first ad", register_path, class: "btn btn-success btn-lg" %>
   </br>
   </br>
   </br>
