Ad index page done

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,2 +1,182 @@
+<div class=" container padding-corrected ">
+  <div class="row">
+    <div id="filters-sidebar" class="col-lg-2">
+      <div class="row filter">
+        <h3> FILTERS</h3> 
+      </div> <!-- end of filters heading -->
 
+      <div class="row filter">
+        <h4 class="filter-heading">Brand</h4>
+        <ul class="filter-list">
+          <li><a href="">Apple</a> (351)</li>
+          <li class="active-filter"><a href="">Samsung</a> (228)</li>
+          <li><a href="">HTC</a> (265)</li>
+          <li><a href="">ONEPLUS ONE</a> (134)</li>
+          <li><a href="">Nokia</a> (110)</li>
+          <li><a href="">Blackberry</a> (1)</li>
+        </ul>
+      </div> 
+
+      <div class="row filter">
+        <h4 class="filter-heading">Price</h4>
+        <div class="form-group">
+          <input type="text" class="form-control price-range" placeholder="Min">
+          to
+          <input type="text" class="form-control price-range" placeholder="Max">
+        </div>
+      </div> 
+
+      <div class="row filter">
+        <h4 class="filter-heading">Conditions</h4>
+        <ul class="filter-list">
+          <li class= "active-filter"><a href="">Never used</a> (3)</li>
+          <li><a href="">Like new </a> (20)</li>
+          <li><a href="">Great</a> (300)</li>
+          <li><a href="">Good</a> (121)</li>
+          <li><a href="">Functional</a> (13)</li>
+          <li><a href="">Turns on</a> (1)</li>
+        </ul>
+      </div>  
+
+      <div class="row filter">
+        <h4 class="filter-heading">Accessories</h4>
+          <input type="checkbox" > Charger <br>
+          <input type="checkbox" > Original box <br>
+          <input type="checkbox" > Headsets <br>
+          <input type="checkbox" > Extra battery <br>
+          <input type="checkbox" > Memory Card <br>
+      </div>  
+    </div> <!--end of filters column  -->
+    <div class="col-lg-10">
+      <div class="row">
+        <div class="col-lg-6">
+          <p>
+            <h3>Canada &raquo Ontario &raquo Toronto</h3> 
+          </p>
+        </div>
+        <div class="col-lg-6">
+          <div  class="dropdown pull-right">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+              <span class = "glyphicon glyphicon-sort-by-attributes-alt"></span> Sort by
+              <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Lowest Price</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Seller reputation</a></li>
+              <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Best conditions</a></li>
+            </ul>
+          </div> 
+        </div>
+      </div><!-- end of navigation row -->
+
+      <div class="row">
+        <div class=" col-md-3 ">
+          <div class="thumbnail phone-thumbnail">
+            <img class = "model-image" src="/assets/bberry.jpg" alt="bberry">
+            <div class="caption">
+              <ul class="cell-info">
+                <li><h4 class="phone-name">BlackBerry</h4></li>
+                <li><h4>$1</h4></li>
+              </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+            </div>
+          </div>
+        </div>
+
+        <div class=" col-md-3">
+          <div class="thumbnail phone-thumbnail">
+            <img class = "model-image" src="/assets/iphone.jpg" alt="bberry">
+            <div class="caption">
+              <ul class="cell-info">
+                <li><h4 class="phone-name">iPhone</h4></li>
+                <li><h4>$200</h4></li>
+              </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+            </div>
+          </div>
+        </div>
+
+        <div class=" col-md-3">
+          <div class="thumbnail phone-thumbnail">
+            <img class = "model-image" src="/assets/nokia.jpg" alt="bberry">
+            <div class="caption">
+              <ul class="cell-info">
+                <li><h4 class="phone-name">Nokia</h4></li>
+                <li><h4>$80</h4></li>
+              </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+            </div>
+          </div>
+        </div>
+
+        <div class=" col-md-3">
+          <div class="thumbnail phone-thumbnail">
+            <img class = "model-image" src="/assets/nokia2.jpg" alt="bberry">
+            <div class="caption">
+              <ul class="cell-info">
+                <li><h4 class="phone-name">Nokia</h4></li>
+                <li><h4>$100</h4></li>
+              </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+            </div>
+          </div>
+        </div>
+      </div><!-- end of ads row 1 -->
+
+      <div class="row">
+        <div class=" col-md-3 ">
+          <div class="thumbnail phone-thumbnail">
+            <img class = "model-image" src="/assets/bberry.jpg" alt="bberry">
+            <div class="caption">
+              <ul class="cell-info">
+                <li><h4 class="phone-name">Blackberry</h4></li>
+                <li><h4>$1</h4></li>
+              </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+            </div>
+          </div>
+        </div>
+
+        <div class=" col-md-3">
+          <div class="thumbnail phone-thumbnail">
+            <img class = "model-image" src="/assets/iphone.jpg" alt="bberry">
+            <div class="caption">
+              <ul class="cell-info">
+                <li><h4 class="phone-name">iPhone</h4></li>
+                <li><h4>$50</h4></li>
+              </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+            </div>
+          </div>
+        </div>
+
+        <div class=" col-md-3">
+          <div class="thumbnail phone-thumbnail">
+            <img class = "model-image" src="/assets/nokia.jpg" alt="bberry">
+            <div class="caption">
+              <ul class="cell-info">
+                <li><h4 class="phone-name">Nokia</h4></li>
+                <li><h4>$50</h4></li>
+              </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+            </div>
+          </div>
+        </div>
+
+        <div class=" col-md-3">
+          <div class="thumbnail phone-thumbnail">
+            <img class = "model-image" src="/assets/nokia2.jpg" alt="bberry">
+            <div class="caption">
+              <ul class="cell-info">
+                <li><h4 class="phone-name">Nokia</h4></li>
+                <li><h4>$50</h4></li>
+              </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+            </div>
+          </div>
+        </div>
+      </div><!-- end of ads row 2 -->
+    </div> <!-- end of ads column -->
+  </div> <!-- end of main row --> 
+</div> <!-- end of container corrected padding -->
 
