--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
   <h1>Bazaar</h1>
-  <h3>A straightforward place to sell and buy cellphones</h3>
+  <h3> We set up the tent and you trade</h3>
   <div class="container marketing text-center">
   </br>
   </br>
