--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,11 +36,15 @@ body {
   padding-top: 15px;
 }
 
+.padding-corrected{
+  padding-top: 70px;
+  /*This padding is necessary when using the navbar-fixed-top */
+}
+
 /* Form styles
 -------------------------------------------------- */
 .form-signin {
   max-width: 330px;
-  padding-top: 50px;
   margin: 0 auto;
 }
 .form-signin .form-signin-heading,
@@ -71,4 +75,68 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+/* Ads index page styles
+-------------------------------------------------- */
+
+.filter{
+  padding-bottom:10%;
+}
+.dropdown{
+  margin-top: 3%;
+}
+
+.phone-thumbnail{
+  margin-top: 10%;
+}
+
+.filter-list{
+  list-style: none;
+  margin: 0;
+  padding:0;
+}
+
+.cell-info{
+  list-style: none;
+  padding: 0;
+  margin-bottom: 0;
+  li{
+    display: inline-block;
+  }
+  li:nth-child(2){
+    float:right;
+  }
+}
+.model-image{
+  border: solid 1px #ddd;
+}
+.active-filter{
+  padding-left: 15%; 
+  padding-top: 2%;
+  padding-bottom: 2%;
+  color: red;
+  a{
+    color: red;
+  }
+}
+
+.filter-heading{
+  font-weight: bold;
+}
+.price-range{
+  width: 30%;
+  display: inline;
+}
+
+#filters-sidebar{
+  
+  border-radius: 3px;
+  .filter{
+    margin-left: 2%;
+  }
+
+}
+
+.phone-name{
+  font-weight: bold;
 }
