Tied layout links

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -74,7 +74,7 @@
       <div class="row">
         <div class=" col-md-3 ">
           <div class="thumbnail phone-thumbnail">
-            <img class = "model-image" src="/assets/bberry.jpg" alt="bberry">
+            <a href="/ad-example"><img class="model-image" src="/assets/bberry.jpg" alt="bberry"></a>
             <div class="caption">
               <ul class="cell-info">
                 <li><h4 class="phone-name">BlackBerry</h4></li>
