--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,16 +55,16 @@
           Select your location <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu">
-          <li><a href="#">Alberta</a></li>
-          <li><a href="#">British Columbia</a></li>
-          <li><a href="#">Manitoba</a></li>
-          <li><a href="#">New Brunswick</a></li>
-          <li><a href="#">Newfoundland and Labrador</a></li>
-          <li><a href="#">Nova Scotia</a></li>
-          <li><a href="#">Ontario</a></li>
-          <li><a href="#">Prince Edward Island</a></li>
-          <li><a href="#">Quebec</a></li>
-          <li><a href="#">Saskatchewan</a></li>
+          <li><a href="/ads">Alberta</a></li>
+          <li><a href="/ads">British Columbia</a></li>
+          <li><a href="/ads">Manitoba</a></li>
+          <li><a href="/ads">New Brunswick</a></li>
+          <li><a href="/ads">Newfoundland and Labrador</a></li>
+          <li><a href="/ads">Nova Scotia</a></li>
+          <li><a href="/ads">Ontario</a></li>
+          <li><a href="/ads">Prince Edward Island</a></li>
+          <li><a href="/ads">Quebec</a></li>
+          <li><a href="/ads">Saskatchewan</a></li>
         </ul>
       </div>
     </div>
