--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,6 +16,17 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Already a member?", login_path %></li>
         <li><%= link_to "About", about_path %></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">LINKS <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About page</a></li>
+            <li><a href="/login">Login page</a></li>
+            <li><a href="/ads">Ads index page</a></li>
+            <li><a href="/ad-example">Ad show page</a></li>
+            <li><a href="/ads/new">Ad creation page</a></li>
+          </ul>
+        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
