--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,15 +26,27 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-4 col-lg-offset-2">
-      <h3>Sign up to sell your stuff</h3>
-      <p>It's free and easy</p>
+      <h1>Are you a seller?</h1>
+      <p>Sign up now to sell your phone, it's free!<p>
       <form role="form">
         <div class="form-group">
-            <input id="username" type="text" class="form-control" placeholder="Username">
+            <input id="username" type="text" class="form-control" placeholder="Full Name">
         </div>
 
         <div class="form-group">
             <input id="email" type="text" class="form-control" placeholder="Email">
+        </div>
+
+        <div class="form-group">
+            <input id="phone" type="text" class="form-control" placeholder="Phone Number">
+        </div>
+
+        <div class="form-group">
+            <input id="city" type="text" class="form-control" placeholder="City">
+        </div>
+
+        <div class="form-group">
+            <input id="province" type="text" class="form-control" placeholder="Province">
         </div>
 
         <div class="form-group">
@@ -44,13 +56,18 @@
         <div class="form-group">
             <input id="repassword" type="text" class="form-control" placeholder="Re-enter Password">
         </div>
-  
+        
+        <div class="checkbox">
+          <input type="checkbox"> I agree with the Terms and Condition
+        </div>
+
         <button id="singup-button" type="submit" class="btn btn-success">Sing Up!</button>
       </form>
     </div>
     <div class="col-lg-4 col-lg-offset-1">
-      <h3>...or start browsing now</h3>
-      <div class="btn-group container">
+      <h1>Are you a buyer?</h1>
+      <p>No need to sign up, start browsing the phones now!<p>
+      <div class="btn-group container" id="home-location-button">
         <button class="btn btn-primary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
           Select your location <span class="caret"></span>
         </button>
