--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -157,3 +157,13 @@ body {
 #send-button{
   float:right;
 }
+/* User show page styles
+-------------------------------------------------- */
+.user-info{
+  position:absolute;
+  top: 0px;
+}
+
+.parent{
+  position: relative;
+}
