--- a/app/views/ads/ad_example.html.erb
+++ b/app/views/ads/ad_example.html.erb
@@ -65,11 +65,12 @@
     </div> <!-- end of ad info -->
 
     <div class="col-lg-3">
-      <img src="/assets/user.jpg" alt="">
-      <ul class="seller-info">
-        <li><strong>Jane Doe</strong></li>
-        <li><strong>Phone:</strong> 613 897 5642</li>
-        <li><strong>Email:</strong> janedoe@hotmail.com</li>
+      <h3>Seller's Information</h3>
+      <ul class="user-info">
+        <li><strong>Username:</strong> Pablito</li>
+        <li><strong>Location:</strong> Copacabana, Brasil</li>
+        <li><strong>Email:</strong> pablito@hotmail.com</li>
+        <li><strong>Phone:</strong> 613 786 1324</li>
       </ul>
 
       <h3>Send a message</h3>
