--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -25,6 +25,7 @@
             <li><a href="/ads">Ads index page</a></li>
             <li><a href="/ad-example">Ad show page</a></li>
             <li><a href="/ads/new">Ad creation page</a></li>
+            <li><a href="/user-example">User show page</a></li>
           </ul>
         </li>
       </ul>
