--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,38 +1,124 @@
 <div class="container padding-corrected">
-  <div class="row text-center">
-    <h3>Pablito's Tent</h3>
-  </div> <!-- end of header rows -->
+  
+  <h3>Pablito's Profile</h3>
+  
   <div class="row">
-    <div class="col-lg-4">
-      <img src="/assets/user.jpg" alt="">
-    </div>
     <div class="col-lg-4">
       <ul class="user-info">
-        <li><strong>Username:</strong> Helena1233</li>
-        <li><strong>Location:</strong></li>
+        <li><strong>Username:</strong> Pablito</li>
+        <li><strong>Location:</strong> Copacabana, Brasil</li>
+        <li><strong>Email:</strong>pablito@hotmail.com</li>
         <li><strong>Phone:</strong>613 786 1324</li>
       </ul>
-    </div>
-    <div class="col-lg-4">
-      <ul>
-        <li><strong>Feature Items</strong></li>
-        <li>Samsumg Galaxy</li>
-        <li>iPhone 6</li>
-      </ul>
-    </div> <!-- end of feature items -->
+    </div> <!-- End of user info -->
   </div> <!-- end of header row -->
+  <h3>20 Active ads</h3>
   <div class="row">
     <div class="col-lg-3">
-      <div class="thumbnail"><img src="/assets/nokia.jpg" alt=""></div>
+      <div class="thumbnail phone-thumbnail">
+        <img class = "model-image" src="/assets/iphone.jpg" alt="bberry">
+          <div class="caption">
+            <ul class="cell-info">
+              <li><h4 class="phone-name">iPhone</h4></li>
+              <li><h4>$200</h4></li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+          </div>
+      </div>
     </div>
+
     <div class="col-lg-3">
-      <div class="thumbnail"><img src="/assets/nokia.jpg" alt=""></div>
+      <div class="thumbnail phone-thumbnail">
+        <img class = "model-image" src="/assets/iphone.jpg" alt="bberry">
+          <div class="caption">
+            <ul class="cell-info">
+              <li><h4 class="phone-name">iPhone</h4></li>
+              <li><h4>$200</h4></li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+          </div>
+      </div>
     </div>
+
     <div class="col-lg-3">
-      <div class="thumbnail"><img src="/assets/nokia.jpg" alt=""></div>
+      <div class="thumbnail phone-thumbnail">
+        <img class = "model-image" src="/assets/iphone.jpg" alt="bberry">
+          <div class="caption">
+            <ul class="cell-info">
+              <li><h4 class="phone-name">iPhone</h4></li>
+              <li><h4>$200</h4></li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+          </div>
+      </div>
     </div>
+
     <div class="col-lg-3">
-      <div class="thumbnail"><img src="/assets/nokia.jpg" alt=""></div>
+      <div class="thumbnail phone-thumbnail">
+        <img class = "model-image" src="/assets/iphone.jpg" alt="bberry">
+          <div class="caption">
+            <ul class="cell-info">
+              <li><h4 class="phone-name">iPhone</h4></li>
+              <li><h4>$200</h4></li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+          </div>
+      </div>
     </div>
-  </div>
+  </div> <!-- end of first row -->
+
+  <div class="row">
+    <div class="col-lg-3">
+      <div class="thumbnail phone-thumbnail">
+        <img class = "model-image" src="/assets/iphone.jpg" alt="bberry">
+          <div class="caption">
+            <ul class="cell-info">
+              <li><h4 class="phone-name">iPhone</h4></li>
+              <li><h4>$200</h4></li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+          </div>
+      </div>
+    </div>
+
+    <div class="col-lg-3">
+      <div class="thumbnail phone-thumbnail">
+        <img class = "model-image" src="/assets/iphone.jpg" alt="bberry">
+          <div class="caption">
+            <ul class="cell-info">
+              <li><h4 class="phone-name">iPhone</h4></li>
+              <li><h4>$200</h4></li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+          </div>
+      </div>
+    </div>
+
+    <div class="col-lg-3">
+      <div class="thumbnail phone-thumbnail">
+        <img class = "model-image" src="/assets/iphone.jpg" alt="bberry">
+          <div class="caption">
+            <ul class="cell-info">
+              <li><h4 class="phone-name">iPhone</h4></li>
+              <li><h4>$200</h4></li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+          </div>
+      </div>
+    </div>
+
+    <div class="col-lg-3">
+      <div class="thumbnail phone-thumbnail">
+        <img class = "model-image" src="/assets/iphone.jpg" alt="bberry">
+          <div class="caption">
+            <ul class="cell-info">
+              <li><h4 class="phone-name">iPhone</h4></li>
+              <li><h4>$200</h4></li>
+            </ul>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem eum inventore, similique reiciendis repellat</p>
+          </div>
+      </div>
+    </div>
+  </div> <!-- end of first row -->
+    
 </div> <!-- end of big wrapper container -->
