Minor changes to ad create

--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -2,18 +2,9 @@
   <div class="row">
     <h2 id="ad_placement">Place Your Ad</h2></br>
     <form role="form">
-      <div class="form-group">
-        <label for="name">Name</label><br>
-        <input id="name" type="text" class="form-control" placeholder="Your name">
-      </div>
 
       <div class="form-group">
-        <label for="email">Email</label><br>
-        <input id="email" type="text" class="form-control" placeholder="Your email">
-      </div>
-
-      <div class="form-group">
-        <label for="phone-number">Phone number (optional)</label><br>
+        <label for="phone-number">Phone number (idea of showing only if the user have not inserted yet)</label><br>
         <input id="phone-number" type="text" class="form-control" placeholder="Your email">
       </div>
 
@@ -59,9 +50,7 @@
           <option>Toshiba</option>
           <option>ZTE</option>
           <option>Other</option>
-        </select></br>
-        If other especify:
-        <input id="brand-especify" type="text" class="form-control" placeholder="Especify brand">
+        </select>
       </div>
 
       <div class="form-group">
@@ -152,10 +141,8 @@
           <option>Bragg</option>
           <option>TBayTel</option>
           <option>Ice</option>
-          <option>Other (especify below)</option>
+          <option>Other</option>
         </select>
-        If other especify:
-        <input id="carrier-especify" type="text" class="form-control" placeholder="Especify carrier">
       </div>
 
       <div class="form-group">
