Updated ad show page and index page

--- a/app/views/ads/ad_example.html.erb
+++ b/app/views/ads/ad_example.html.erb
@@ -3,13 +3,15 @@
 
     <div class="col-lg-9">
       <h2>Nokia</h2>
+
       <div class="row">
-        <div class="col-lg-6 col-lg-offset-0">
+        <div class="col-lg-6">
           <div class="thumbnail">
             <img src="/assets/nokia.jpg" alt="">
           </div>
         </div>
       </div>
+
       <div class="row">
         <div class="col-lg-2">
           <div class="thumbnail"><img src="/assets/nokia.jpg" alt=""></div>
@@ -31,36 +33,42 @@
         </div>
       </div>
 
+      <p class="lead"><strong>Price:</strong> $150</p>
+      <p class="lead"><strong>General info:</strong></p>
       <div class="row">
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th width="15%">Brand</th>
-              <th width="15%">Model</th>
-              <th width="15%">Condition</th>
-              <th width="15%">Usage time</th>
-              <th width="15%">Carrier </th>
-              <th width="15%">Accesories</th>
-            </tr>
-          </thead>
-          <tbody  class="table-responsive">
-            <tr>
-              <td>Apple</td>
-              <td>iPhone</td>
-              <td>Like New</td>
-              <td>Less than 6 months</td>
-              <td>Unlocked</td>
-              <td>Box</td>
-            </tr>
-          </tbody>
-        </table> <!-- end of table -->
-      </div> <!-- end of table row -->
-      
-      <div class="ad-description row">
-        <h3 style="margin-top:0;">Description</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium voluptas, adipisci atque esse soluta labore autem, quis sequi nisi, deserunt enim quidem ratione. Temporibus magnam, laborum alias et possimus est!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor numquam alias laudantium atque ex deserunt praesentium quidem iste odit eos non, nobis accusantium, tempore quibusdam repudiandae recusandae repellendus vitae consequatur.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit quasi tempore hic debitis ea illum, enim provident perspiciatis dignissimos beatae mollitia! Mollitia quisquam ut voluptas, magnam a voluptatum similique quaerat.</p>
+        <div class="col-lg-12">
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th width="15%">Brand</th>
+                <th width="15%">Model</th>
+                <th width="15%">Condition</th>
+                <th width="15%">Usage time</th>
+                <th width="15%">Carrier </th>
+                <th width="15%">Accessories</th>
+                <th width="10%">Warranty</th>
+              </tr>
+            </thead>
+            <tbody  class="table-responsive">
+              <tr>
+                <td>Apple</td>
+                <td>iPhone</td>
+                <td>Like New</td>
+                <td> < 6 months</td>
+                <td>Unlocked</td>
+                <td>Box</td>
+                <td>No</td>
+              </tr>
+            </tbody>
+          </table> <!-- end of table -->
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <p class="lead"><strong>Description</strong></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium voluptas, adipisci atque esse soluta labore autem, quis sequi nisi, deserunt enim quidem ratione. Temporibus magnam, laborum alias et possimus est!
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor numquam alias laudantium atque ex deserunt praesentium quidem iste odit eos non, nobis accusantium, tempore quibusdam repudiandae recusandae repellendus vitae consequatur.</p>
+        </div>
       </div>
     </div> <!-- end of ad info -->
 
