--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -19,6 +19,23 @@
       </div> 
 
       <div class="row filter">
+        <h4 class="filter-heading">Carriers</h4>
+        <ul class="filter-list">
+          <li><a href="">Unlocked (300)</a></li>
+          <li><a href="">Rogers (300)</a></li>
+          <li><a href="">Telus (300)</a></li>
+          <li class="active-filter"><a href="">Bell (300)</a></li>
+          <li><a href="">Globalive (300)</a></li>
+          <li><a href="">SaskTel (300)</a></li>
+          <li><a href="">Videotron (300)</a></li>
+          <li><a href="">Dave (300)</a></li>
+          <li><a href="">Bragg (300)</a></li>
+          <li><a href="">TBayTel (300)</a></li>
+          <li><a href="">Ice (300)</a></li>
+        </ul>
+      </div> 
+
+      <div class="row filter">
         <h4 class="filter-heading">Price</h4>
         <div class="form-group">
           <input type="text" class="form-control price-range" placeholder="Min">
@@ -39,14 +56,7 @@
         </ul>
       </div>  
 
-      <div class="row filter">
-        <h4 class="filter-heading">Accessories</h4>
-          <input type="checkbox" > Charger <br>
-          <input type="checkbox" > Original box <br>
-          <input type="checkbox" > Headsets <br>
-          <input type="checkbox" > Extra battery <br>
-          <input type="checkbox" > Memory Card <br>
-      </div>  
+       
     </div> <!--end of filters column  -->
 
     <div class="col-lg-10">
