Minor changes to index page

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -10,14 +10,25 @@
         <h4 class="filter-heading">Brand</h4>
         <ul class="filter-list">
           <li><a href="">Apple</a> (351)</li>
-          <li class="active-filter"><a href="">Samsung</a> (228)</li>
-          <li><a href="">HTC</a> (265)</li>
-          <li><a href="">ONEPLUS ONE</a> (134)</li>
-          <li><a href="">Nokia</a> (110)</li>
-          <li><a href="">Blackberry</a> (1)</li>
+          <li><a href="">BenQ</a> (351)</li>
+          <li><a href="">BlackBerry</a> (351)</li>
+          <li><a href="">Gradient</a> (351)</li>
+          <li><a href="">Hitachi</a> (351)</li>
+          <li><a href="">HTC</a> (351)</li>
+          <li><a href="">Huawei</a> (351)</li>
+          <li><a href="">Kyocera</a> (351)</li>
+          <li><a href="">LG</a> (351)</li>
+          <li><a href="">Motorola</a> (351)</li>
+          <li class="active-filter"><a href="">Nokia</a> (351)</li>
+          <li><a href="">Palm</a> (351)</li>
+          <li><a href="">Samsung</a> (351)</li>
+          <li><a href="">Sony Ericsson</a> (351)</li>
+          <li><a href="">Toshiba</a> (351)</li>
+          <li><a href="">ZTE</a> (351)</li>
+          <li><a href="">Other</a> (351)</li>
         </ul>
       </div> 
-
+  
       <div class="row filter">
         <h4 class="filter-heading">Carriers</h4>
         <ul class="filter-list">
@@ -28,10 +39,12 @@
           <li><a href="">Globalive (300)</a></li>
           <li><a href="">SaskTel (300)</a></li>
           <li><a href="">Videotron (300)</a></li>
+          <li><a href="">MTS(300)</a></li>
           <li><a href="">Dave (300)</a></li>
           <li><a href="">Bragg (300)</a></li>
           <li><a href="">TBayTel (300)</a></li>
           <li><a href="">Ice (300)</a></li>
+          <li><a href="">Other (320)</a></li>
         </ul>
       </div> 
 
@@ -49,14 +62,11 @@
         <ul class="filter-list">
           <li class= "active-filter"><a href="">Never used</a> (3)</li>
           <li><a href="">Like new </a> (20)</li>
-          <li><a href="">Great</a> (300)</li>
-          <li><a href="">Good</a> (121)</li>
-          <li><a href="">Functional</a> (13)</li>
-          <li><a href="">Turns on</a> (1)</li>
+          <li><a href="">Great </a> (300)</li>
+          <li><a href="">Good </a> (121)</li>
+          <li><a href="">Functional</a> (1)</li>
         </ul>
       </div>  
-
-       
     </div> <!--end of filters column  -->
 
     <div class="col-lg-10">
