Added user authentication

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,6 +25,18 @@
   padding-top: 70px;
 }
 
+.alert {
+  margin-top: 100px;
+  margin-bottom: -50px;
+  margin-left: 250px;
+  margin-right: 250px;
+}
+
+.panel {
+  margin-left: 400px;
+  margin-right: 400px;
+}
+
 .dropdown-toggle {
   padding-top: 6px !important;
 }
