--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,20 +14,14 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Already a member?", login_path %></li>
-        <li><%= link_to "About", about_path %></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">LINKS <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About page</a></li>
-            <li><a href="/login">Login page</a></li>
-            <li><a href="/ads">Ads index page</a></li>
-            <li><a href="/ad-example">Ad show page</a></li>
-            <li><a href="/ads/new">Ad creation page</a></li>
-            <li><a href="/user-example">User show page</a></li>
-          </ul>
-        </li>
+        <% if user_signed_in? %>
+          <li><%= link_to "Logged in as #{current_user.email}", root_path %>
+          <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
+          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Already a member?", new_user_session_path %></li>
+          <li><%= link_to "About", about_path %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
