--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,67 +23,13 @@
     </div><!-- /.row -->
   </div>
 </div>
-<div class="container">
-  <div class="row">
-    <div class="col-lg-4 col-lg-offset-2">
-      <h1>Are you a seller?</h1>
-      <p>Sign up now to sell your phone, it's free!<p>
-      <form role="form">
-        <div class="form-group">
-            <input id="username" type="text" class="form-control" placeholder="Full Name">
-        </div>
-
-        <div class="form-group">
-            <input id="email" type="text" class="form-control" placeholder="Email">
-        </div>
-
-        <div class="form-group">
-            <input id="phone" type="text" class="form-control" placeholder="Phone Number">
-        </div>
-
-        <div class="form-group">
-            <input id="city" type="text" class="form-control" placeholder="City">
-        </div>
-
-        <div class="form-group">
-            <input id="province" type="text" class="form-control" placeholder="Province">
-        </div>
-
-        <div class="form-group">
-            <input id="password" type="text" class="form-control" placeholder="Password">
-        </div>
-
-        <div class="form-group">
-            <input id="repassword" type="text" class="form-control" placeholder="Re-enter Password">
-        </div>
-        
-        <div class="checkbox">
-          <input type="checkbox"> I agree with the Terms and Condition
-        </div>
-
-        <button id="singup-button" type="submit" class="btn btn-success">Sing Up!</button>
-      </form>
-    </div>
-    <div class="col-lg-4 col-lg-offset-1">
-      <h1>Are you a buyer?</h1>
-      <p>No need to sign up, start browsing the phones now!<p>
-      <div class="btn-group container" id="home-location-button">
-        <button class="btn btn-primary btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-          Select your location <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" role="menu">
-          <li><a href="/ads">Alberta</a></li>
-          <li><a href="/ads">British Columbia</a></li>
-          <li><a href="/ads">Manitoba</a></li>
-          <li><a href="/ads">New Brunswick</a></li>
-          <li><a href="/ads">Newfoundland and Labrador</a></li>
-          <li><a href="/ads">Nova Scotia</a></li>
-          <li><a href="/ads">Ontario</a></li>
-          <li><a href="/ads">Prince Edward Island</a></li>
-          <li><a href="/ads">Quebec</a></li>
-          <li><a href="/ads">Saskatchewan</a></li>
-        </ul>
-      </div>
-    </div>
-  </div> <!-- end of signup row -->
+<div class="container text-center">
+  <h1>Are you a seller?</h1>
+  <p>Sign up now to sell your phone, it's free!<p>
+  <%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-success btn-lg" %>
+</div>
+<div class="container text-center">
+  <h1>Are you a buyer?</h1>
+  <p>No need to sign up, start browsing the phones now!<p>
+  <%= link_to "Click Here To Start!", "#", class: "btn btn-primary btn-lg" %>
 </div>
