--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,11 +3,32 @@
     <div class="panel-heading">
       <div class="panel-title">
         <h1>Edit <%= resource_name.to_s.humanize %></h1>
+        <p>Please fill all the information below, it will help you sell faster!</p>
       </div>
     </div>
     <div class="panel-body">
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-        <%= devise_error_messages! %>
+          <%= devise_error_messages! %>
+
+      <div class="form-group">
+        <%= f.label :name %>
+        <%= f.text_field :name, class: "form-control", :autofocus => true %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :phone_number %> <i>(optional)</i>
+        <%= f.text_field :phone_number, class: "form-control", :autofocus => true %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :city %>
+        <%= f.text_field :city, class: "form-control", :autofocus => true %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :province %>
+        <%= f.text_field :province, class: "form-control", :autofocus => true %>
+      </div>
 
       <div class="form-group">
         <%= f.label :email %>
