--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <section id="main" data-type="background" data-speed="10">
   <div class="jumbotron text-center">
-    <h1><strong>Bazaar</strong></h1></br>
-    <h3>We set up the tent. You make the trade</h3>
+    <h1><strong>Phone Bazaar</strong></h1></br>
+    <h3>We set up the tent. You make the trade.</h3>
  </div>
 </section>
 
