Remember me label padding corrected

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,6 +44,10 @@
   margin-bottom: 120px !important;
 }
 
+.checkbox label {
+  padding-left: 0px !important;
+}
+
 .padding-corrected { /*This padding is necessary when using the navbar-fixed-top */
   padding-top: 70px;
 }
